[package]
name = "BCS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.203", features = ["derive"]}
derive_more = {version = "0.99.18", features = ["default"]}
tokio = {version = "1.38.0", features = ["full"]}
tokio-util = {version = "0.7.11", features = ["full"]}
tiberius = {version = "0.12.2", features = ["all"]}
chrono = {version = "0.4.38", features = ["default", "serde"]}
futures = {version = "0.3.30"}
rayon = "1.10.0"
anyhow = "1.0.86"
dotenvy = {version = "0.15.7"}
ads = {version = "0.4.3"}